# learning-service

./: .env.development  .env.example  API_USAGE_EXAMPLES.md  BIGQUERY_ANALYTICS.md  CURRICULUM_GENERATION_SUMMARY.md  PHASE5_API_DOCUMENTATION.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE6_IMPLEMENTATION_PLAN.md  PHASE7_IMPLEMENTATION_PLAN.md  README.md  instruction.md  llm_usecases.md  phases.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/analytics/: __init__.py  bigquery_client.py
app/llm/: curriculum_llm.py  embeddings.py  progress_analytics_llm.py  teaching_llm.py
app/models/: curriculum_model.py  feedback_model.py  lesson_model.py  progress_model.py  skill_model.py  topic_model.py  tutor_model.py  user_model.py
app/routes/: adaptive_learning.py  curriculum.py  evaluation.py  feedback.py  progress.py  skill_level.py  teaching.py  topic_selection.py  tutor.py
app/services/: adaptive_learning_paths_service.py  adaptive_learning_service.py  curriculum_service.py  evaluation_service.py  feedback_service.py  (+6 more)
scripts/: demo_curriculum.py  list_gemini_models.py  setup_gcp_credentials.py  test_development_env.py  test_teaching_endpoints.py  test_tutor_endpoints.py
tests/: test_adaptive_learning_integration.py  test_curriculum.py  test_curriculum_service.py  test_evaluation.py  test_feedback.py  test_feedback_integration.py  test_integration.py  test_mocked_llm.py  test_progress.py  test_progress_analytics.py  test_progress_integration.py  test_skill_level.py  test_subject_service.py  test_teaching_llm.py  test_topic_selection.py  test_tutor.py
(+1 files in other folders)
